// 添加Service属性的消息会在生成接收代码封装,同时加到路由表中

enum ResultCode
{
	NoError = 0
	ServerNotFound = 101
	ServerAddressError
}
